# ad_campaign_project-Django-

./: .dockerignore  .env.example  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
ad_campaign_manager/: asgi.py  settings.py  urls.py  wsgi.py
campaigns/: forms.py  models.py  tests.py  urls.py  views.py
campaigns/migrations/: 0001_initial.py  0002_initial.py
campaigns/templates/campaigns/: campaign_confirm_delete.html  campaign_detail.html  campaign_form.html  campaign_list.html  improve_campaign.html
google_trends/: forms.py  trends.py  urls.py  views.py
google_trends/templates/: cookie_policy.html  privacy_policy.html  terms.html  trends.html
image_generator/: forms.py  tests.py  urls.py  views.py
image_generator/templates/image_generator/: generate_image.html
static/css/: style.css
static/js/: image_generator.js
templates/: base.html
templates/account/: login.html
users/: forms.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py
users/templates/: home.html  register.html
users/templates/users/: edit_profile.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html
